# flowdesk

./: .env.example  .gitignore  LOCAL_SETUP_GUIDE.md  README.md  main.py  pyproject.toml
.agents/: app_agent.md  backend_agent.md  integration_agent.md  orchestrator_agent.md  scripts_agent.md
.ai_context/: AI_WORKFLOW.md  BACKEND_REVIEW_NOTES.md  DATA_CONTRACT.md  FUTURE_PLAN.md  PROJECT_BRIEF.md  WOKFLOW_DEVELOPMENT_GUIDE.md
.streamlit/: secrets.example.toml
ai_agent/: llm_troubleshooting_agent.md
ai_agents/: admin_validation_email_agent.md
app/: __init__.py  main.py
app/components/: __init__.py  event_timeline.py  metrics_bar.py  ticket_detail.py  ticket_table.py
app/pages/: __init__.py  admin_dashboard.py  staff_dashboard.py  student_portal.py
backend/: __init__.py  auth.py  classifier.py  complaint_drafts.py  complaint_validation.py  constants.py  db.py  email_routes.py  email_service.py  escalation.py  llm.py  llm_schemas.py  models.py  router.py  sla.py  telegram_helpers.py  validation_workflow.py  webhook.py  workflow.py
guides/: frontend_changes_guide.md
scripts/: __init__.py  run_demo.py  run_escalations.py  seed_data.py
tests/: __init__.py  conftest.py  test_complaint_validation.py  test_contracts.py  test_db.py  test_webhook.py  test_workflow.py
