[project]
name = "flowdesk"
version = "0.1.0"
description = "Autonomous Multi-Agent Campus Issue Resolution Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
